<resources>
    <string name="app_name">Todo Starter</string>
    <string name="edit">Edit</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="sample_name">Sample Name</string>
    <string name="sample_description">Sample Description</string>
    <string name="_1">1</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Done</string>
    <string name="snooze">Snooze</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add">add</string>
    <string name="add_">Add</string>
</resources>
